--- a/Assignment-04/about.html
+++ b/Assignment-04/about.html
@@ -5,10 +5,9 @@
   </head>
 <body>
 
-    <p>Winter Ramos is an aspiring poet who doesn’t have anything published but every
-few months writes something down when he feels like it… </p>
+    <p>Winter Ramos is an aspiring poet who doesn't have anything published but every
+few months writes something down when he feels like it... </p>
 
-
-Poetry-109.JPG
+<img src="Images/Poetry-109.JPG" width="500"/>
 </body>
 </html>
