--- a/Assignment-04/about.html
+++ b/Assignment-04/about.html
@@ -9,5 +9,8 @@
 few months writes something down when he feels like it... </p>
 
 <img src="Images/Poetry-109.JPG" width="500"/>
+
+ <a href="index.html">Home Page</a>
+
 </body>
 </html>
