--- a/Assignment-04/index.html
+++ b/Assignment-04/index.html
@@ -20,6 +20,6 @@ To tears in the empty street of dawn and fog
 Ephemeral like a woman's lips on your spine for the last time
 </p>
 
-
+<a href="about.html">about the author</a>
   </body>
 </html>
