--- a/Assignment-05/index.html
+++ b/Assignment-05/index.html
@@ -29,9 +29,12 @@
 
 
 
-<h4>by: <b>Winter Ramos</b></h4>
+
 <b>The Bacon Ice Cream and Whiskey Diet</b>
 <i>A Nutrition Guide for Performance Athletes</i>
+<h4>by: <b><i>Winter Ramos</i></b></h4>
+
+
 
 
 <hr />
@@ -39,6 +42,9 @@
 
 </p>
 <img src="Images/bacon.JPG" width="500"/>
+<p>Photo Credit <i>Winter Ramos</i></p>
+<p>For more of his photos go to... <a href="https://winterproductions.pixieset.com/">Winter's Photos</a>.</p>
+
 
   </body>
 </html>
