--- a/Assignment-05/index.html
+++ b/Assignment-05/index.html
@@ -3,28 +3,33 @@
 <html>
   <head>
     <title>Recipe</title>
+
+    <meta charset="UTF-8">
+        <meta name="description" content="My Recipe for Ice Cream">
+        <meta name="author" content="Winter Ramos">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
   <body>
 <h1><b>Bacon + Whiskey + Ice Cream</b></h1>
 
-<h2>Ingredients<h2>
+<h2>Ingredients</h2>
 
   <ul>
     <li>Bacon</li>
-    <li>Ice Cream</li>
-    <li>Whiskey</li>
+     <li>Ice Cream</li>
+      <li>Whiskey</li>
   </ul>
 
-<h3>Directions<h3>
+<h3>Directions</h3>
 
   <ol>
     <li>Place Two Scoops of Ice Cream in bowl</li>
-    <li>Oven roast bacon bits until lightly crunchy</li>
-    <li>Sprinkle bacon bits over ice cream</li>
-    <li>Open bottle of good bourbon whiskey</li>
-    <li>Pour over bowl of ice cream and bacon</li>
-    <li>Eat</li>
+     <li>Oven roast bacon bits until lightly crunchy</li>
+      <li>Sprinkle bacon bits over ice cream</li>
+       <li>Open bottle of good bourbon whiskey</li>
+         <li>Pour over bowl of ice cream and bacon</li>
+          <li>Eat</li>
   </ol>
 
 
@@ -38,12 +43,20 @@
 
 
 <hr />
-<p>
 
-</p>
-<img src="Images/bacon.JPG" width="500"/>
+<img src="Images/bacon.jpg" width="500"/>
 <p>Photo Credit <i>Winter Ramos</i></p>
 <p>For more of his photos go to... <a href="https://winterproductions.pixieset.com/">Winter's Photos</a>.</p>
+
+
+<p>Contact:</p>
+
+<p><a href="mailto:winter.ramos@umontana.edu">winter.ramos@umontana.edu</a></p>
+
+<p>E-mail Winter for pertinent dietary questions</p>
+
+<p><a href="http://apps.umt.edu/comments/">Comments</a></p>
+
 
 
   </body>
