--- a/Assignment-05/index.html
+++ b/Assignment-05/index.html
@@ -52,6 +52,8 @@
 <p>Contact:</p>
 
 <p><a href="mailto:winter.ramos@umontana.edu">winter.ramos@umontana.edu</a></p>
+<address> 32 Campus Drive <br>
+Missoula, MT 59812 </address>
 
 <p>E-mail Winter for pertinent dietary questions</p>
 
