--- a/Assignment-05/index.html
+++ b/Assignment-05/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Recipe</title>
-
+<!-- This is a really great recipe-->
     <meta charset="UTF-8">
         <meta name="description" content="My Recipe for Ice Cream">
         <meta name="author" content="Winter Ramos">
