--- a/Assignment-06/index.html
+++ b/Assignment-06/index.html
@@ -12,12 +12,12 @@
 
   <body>
 <h1><b>Super Ultra Mega Income Generation Plan</b></h1>
-
-<p>investors contact winterglobalproductions</p>
+     <h2>For Lots of Profit Business Model</h2>
+<p>Investors Contact winterglobalproductions<br></p>
 <p><a href="mailto:winterglobalproductions@gmail.com">winterglobalproductions@gmail.com</a></p>
 <address> 4 carriage way <br>
 Missoula, MT 59802 <br>
-208-569-4467</address>
+208-569-4467</address><br>
 
 
 <style>
