--- a/Assignment-06/index.html
+++ b/Assignment-06/index.html
@@ -61,43 +61,23 @@ table.GeneratedTable thead {
   </tbody>
 </table>
 
-
-
-
-<h2>Ingredients</h2>
-
-  <ul>
-    <li>Bacon</li>
-     <li>Ice Cream</li>
-      <li>Whiskey</li>
-  </ul>
-
-<h3>Directions</h3>
-
-  <ol>
-    <li>Place Two Scoops of Ice Cream in bowl</li>
-     <li>Oven roast bacon bits until lightly crunchy</li>
-      <li>Sprinkle bacon bits over ice cream</li>
-       <li>Open bottle of good bourbon whiskey</li>
-         <li>Pour over bowl of ice cream and bacon</li>
-          <li>Eat</li>
-  </ol>
+<form action="https://www.paypal.com/us/home"
+method="get">
+<p>It's easy, Go to Paypal and pay me money...</p>
+</form>
 
 
 
 
-<b>The Bacon Ice Cream and Whiskey Diet</b>
-<i>A Nutrition Guide for Performance Athletes</i>
-<h4>by: <b><i>Winter Ramos</i></b></h4>
 
 
 
 
-<hr />
 
-<img src="Images/bacon.jpg" width="500"/>
-<p>Photo Credit <i>Winter Ramos</i></p>
-<p>For more of his photos go to... <a href="https://winterproductions.pixieset.com/">Winter's Photos</a>.</p>
+
+
+
+
 
 
 
