updated again form

--- a/Assignment-06/index.html
+++ b/Assignment-06/index.html
@@ -61,7 +61,7 @@ table.GeneratedTable thead {
   </tbody>
 </table>
 
-<form action="https://www.paypal.com/us/home"
+<form action="https://www.paypal.com/us/home" id="subscribe-form" class="basic-forms"
 method="get">
 <p>It's easy, Go to Paypal and pay me money...</p>
 </form>
