--- a/Assignment-06/index.html
+++ b/Assignment-06/index.html
@@ -63,9 +63,14 @@ table.GeneratedTable thead {
 
 <form action="https://www.paypal.com/us/home" id="subscribe-form" class="basic-forms"
 method="get">
-<p>It's easy, Go to Paypal and pay me money...</p>
+<br>
+<form>
+    First name:   <input type="text" name="firstname">
+    Last name:    <input type="text" name="lastname">
+    Email Adress: <input type="text" name="your email">
 </form>
-
+</form>
+<p>It's easy, Go to Paypal and pay me money or leave your name and email and I will pester you daily...</p>
 
 
 
