--- a/Assignment-06/index.html
+++ b/Assignment-06/index.html
@@ -67,11 +67,16 @@ method="get">
 <form>
     First name:   <input type="text" name="firstname">
     Last name:    <input type="text" name="lastname">
-    Email Adress: <input type="text" name="your email">
+    Email:        <input type="text" name="your email">
 </form>
 </form>
-<p>It's easy, Go to Paypal and pay me money or leave your name and email and I will pester you daily...</p>
+<p>It's easy, Go to Paypal and pay me money or leave your name and email and my office staff will pester you daily to contribute... <br>
+  All Profits go to supporting me and my lifestyle</p>
 
+  <p>
+    Comments:
+    <textarea maxlength="500" rows="5" cols="30" id="test-textarea">Your messages will not be read unless poetically written in Iambic Pentameter</textarea>
+  </p>
 
 
 
