--- a/Assignment-06/index.html
+++ b/Assignment-06/index.html
@@ -11,7 +11,7 @@
 </head>
 
   <body>
-<h1><b>Super Ultra Mega Income Generation Plan</b></h1>
+<h1 ALIGN=CENTER><b>Super Ultra Mega Income Generation Plan</b></h1>
      <h2>For Lots of Profit Business Model</h2>
 <p>Investors Contact winterglobalproductions<br></p>
 <p><a href="mailto:winterglobalproductions@gmail.com">winterglobalproductions@gmail.com</a></p>
@@ -64,32 +64,40 @@ table.GeneratedTable thead {
 <form action="https://www.paypal.com/us/home" id="subscribe-form" class="basic-forms"
 method="get">
 <br>
-<form>
-    First name:   <input type="text" name="firstname">
-    Last name:    <input type="text" name="lastname">
-    Email:        <input type="text" name="your email">
+
 </form>
-</form>
-<p>It's easy, Go to Paypal and pay me money or leave your name and email and my office staff will pester you daily to contribute... <br>
+<p>It's easy, Go to Paypal and pay me money or leave your name and email and my office staff will pester you daily... <br>
   All Profits go to supporting me and my lifestyle</p>
 
   <p>
+    <form>
+  <p> Your favorite city</p>
+    <select>
+        <option value="Lander">Lander</option>
+        <option value="Sandpoint">Sandpoint</option>
+        <option value="Missoula">Missoula</option>
+
+    </select>
+</form>
+<br>
+
+<form>
+    First name:   <input type="text" name="firstname" autofocus>
+    Last name:    <input type="text" name="lastname">
+
+</form>
+<br>
+<form action="" method="post">
+   <p>Subscribe to our e-mail list:</p>
+     <input type="text" name="email" />
+     <input type="submit" name="subscribe" value="Push Me!" />
+</form>
+
+<br>
+  <p ALIGN=RIGHT>
     Comments:
     <textarea maxlength="500" rows="5" cols="30" id="test-textarea">Your messages will not be read unless poetically written in Iambic Pentameter</textarea>
   </p>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 </html>
