--- a/Assignment-07/index.html
+++ b/Assignment-07/index.html
@@ -2,6 +2,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+      <meta author="Winter Ramos">
+      <meta name="viewport" content="width=device-width initial-scale=1.0">
+    <meta name="description" content="Media for the music of Man or Astroman">
+        <title>Rad Surf Rock Band</title>
+
     <Style>body {
 background-color: powderblue;
 text-align: center;
@@ -21,45 +27,62 @@ font-family: Arial;
 }
     </style>
 
-
-
 </head>
 
   <body>
 
-    <div id="art"></div>
+    <div id="art" class="container">
           <img src="Images/Man_or_astroman.jpg" width="500"/>
             <h1 Align=CENTER><b>Man Or Astroman</b></h1>
-      <div id="audio"></div>
-            <audio src=""/>
-                <h2 Align=CENTER><b>Astro Surf Songs</b></h2>
-        <div id="video"></div>
-              <video src="" width="500"/>
-                  <h3 Align=CENTER><b>Video</b></h3>
-          <div id="lyrcis"> </div>
+     </div>
+
+      <div id="audio" class="container"><h2 Align=CENTER><b>Astro Surf Songs</b></h2>
+            <audio src="https://soundcloud.com/carla-guerracristo/popcorn-crabula"/>
+
+</div>
+        <div id="video" class="container"><h3 Align=CENTER><b>Video</b></h3>
+              <video src="https://www.youtube.com/watch?v=6syxA0ThR5Y" width="500"/>
+</div>
+
+          <div id="lyrcis" class="container">
+          <p>
+            Mermaid Love Lyrics
+
+Through the tallest wave
+Into outer space
+Eyes of black against the fish tail
+
+He will die, he will cry
+He will fill his hands up with water
+'Til he gets the song of the siren
+
+Keeps a shell tucked in a pocket to remind him of the sea
+Keeps his eyes upon the water to remind him what could...
+And the whisper that he hears. Is it coming from his head?
+Are there things that talk to him, when he wishes he was...
+
+Though the tallest wave
+Into outer space
+Eyes of black against the fish tail
+
+He will die, he will cry
+He will fill his hands up with water
+’Til he gets the song of the siren
+
+Get in
+</p>
+
                 <img src="" />
+</div>
                     <h4 Align=CENTER><b>Song Lyrics</b></h4>
-            <div id="copyright"> </div>
+            <div id="copyright" class="container">
                   <b></b></5><img src="" />
                       <h5 Align=CENTER><b>Copyright</b></h5>
-
-    <title>Rad Surf Rock Band</title>
-
-<p>Investors Contact winterglobalproductions<br></p>
-<p><a href="mailto:winterglobalproductions@gmail.com">winterglobalproductions@gmail.com</a></p>
-<address> 4 carriage way <br>
-Missoula, MT 59802 <br>
-208-569-4467</address><br>
+                      <p>Though I don't own this material I wish I did, it is being used for a school science project on gravitational wave propultion</p>
+</div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2727.946408075614!2d-113.98552148483405!3d46.8644270469435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dcc3188c55ba3%3A0x763ac649759c375f!2sStudent+Recreation+Center%2C+32+Campus+Dr%2C+Missoula%2C+MT+59812!5e0!3m2!1sen!2sus!4v1551939410964" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 
-
-<form action="https://www.paypal.com/us/home" id="subscribe-form" class="basic-forms"
-method="get">
-<br>
-
-</form>
-<p>It's easy, Go to Paypal and pay me money or leave your name and email and my office staff will pester you daily... <br>
-  All Profits go to supporting me and my lifestyle</p>
 
 
 
