--- a/Assignment-07/index.html
+++ b/Assignment-07/index.html
@@ -32,49 +32,53 @@ font-family: Arial;
   <body>
 
     <div id="art" class="container">
-          <img src="Images/Man_or_astroman.jpg" width="500"/>
+          <img src="Images/Man_or_astroman.jpg" alt="space music cover" width="500"/>
             <h1 Align=CENTER><b>Man Or Astroman</b></h1>
      </div>
 
-      <div id="audio" class="container"><h2 Align=CENTER><b>Astro Surf Songs</b></h2>
-            <audio src="https://soundcloud.com/carla-guerracristo/popcorn-crabula"/>
+      <div id="audio" class="container">
+        <h2 Align=CENTER><b>Astro Surf Songs</b></h2>
+        <iframe width="100%" height="200" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://soundcloud.com/carla-guerracristo/popcorn-crabula">
+        </iframe>
+
 
 </div>
         <div id="video" class="container"><h3 Align=CENTER><b>Video</b></h3>
               <video src="https://www.youtube.com/watch?v=6syxA0ThR5Y" width="500"/>
 </div>
-
+<h4 Align=CENTER><b>Song Lyrics</b></h4>
           <div id="lyrcis" class="container">
           <p>
-            Mermaid Love Lyrics
+            Mermaid Love Lyrics</p>
 
-Through the tallest wave
+<p>Through the tallest wave
 Into outer space
-Eyes of black against the fish tail
+Eyes of black against the fish tail</p>
 
-He will die, he will cry
+<p>He will die, he will cry
 He will fill his hands up with water
-'Til he gets the song of the siren
+'Til he gets the song of the siren</p>
 
-Keeps a shell tucked in a pocket to remind him of the sea
+<p>Keeps a shell tucked in a pocket to remind him of the sea
 Keeps his eyes upon the water to remind him what could...
 And the whisper that he hears. Is it coming from his head?
-Are there things that talk to him, when he wishes he was...
+Are there things that talk to him, when he wishes he was...</p>
 
-Though the tallest wave
+<p>Though the tallest wave
 Into outer space
-Eyes of black against the fish tail
+Eyes of black against the fish tail</p>
 
-He will die, he will cry
+<p>He will die, he will cry
 He will fill his hands up with water
-’Til he gets the song of the siren
+’Til he gets the song of the siren</p>
 
-Get in
+<p>Get in
 </p>
 
                 <img src="" />
 </div>
-                    <h4 Align=CENTER><b>Song Lyrics</b></h4>
+
             <div id="copyright" class="container">
                   <b></b></5><img src="" />
                       <h5 Align=CENTER><b>Copyright</b></h5>
