--- a/Assignment-07/index.html
+++ b/Assignment-07/index.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+      <meta charset="UTF-8">
       <meta author="Winter Ramos">
       <meta name="viewport" content="width=device-width initial-scale=1.0">
-    <meta name="description" content="Media for the music of Man or Astroman">
+      <meta name="description" content="Media for the music of Man or Astroman">
         <title>Rad Surf Rock Band</title>
 
     <Style>body {
@@ -38,13 +38,17 @@ font-family: Arial;
 
       <div id="audio" class="container">
         <h2 Align=CENTER><b>Astro Surf Songs</b></h2>
-        <iframe width="100%" height="200" scrolling="no" frameborder="no" allow="autoplay"
+        <iframe width="100%" height="200" allow="autoplay"
         src="https://soundcloud.com/carla-guerracristo/popcorn-crabula">
         </iframe>
 
 
 </div>
         <div id="video" class="container"><h3 Align=CENTER><b>Video</b></h3>
+          <iframe src="https://www.youtube.com/watch?v=6syxA0ThR5Y"
+              width="500" height="400">
+          </iframe>
+
               <video src="https://www.youtube.com/watch?v=6syxA0ThR5Y" width="500"/>
 </div>
 <h4 Align=CENTER><b>Song Lyrics</b></h4>
