--- a/Assignment-07/index.html
+++ b/Assignment-07/index.html
@@ -1,98 +1,82 @@
 
+
 <!DOCTYPE html>
 <html>
   <head>
-      <meta charset="UTF-8">
-      <meta author="Winter Ramos">
-      <meta name="viewport" content="width=device-width initial-scale=1.0">
-      <meta name="description" content="Media for the music of Man or Astroman">
-        <title>Rad Surf Rock Band</title>
-
-    <Style>body {
-background-color: powderblue;
-text-align: center;
-}
-.container {
-background-color: white;
-width: 600px;
-margin: auto;
-padding: 20px;
-border: 1px solid black;
-}
-.lyrics p, pre {
-background-color: grey;
-color: white;
-font-size: small;
-font-family: Arial;
-}
+    <meta charset="UTF-8">
+    <meta author="Winter Ramos">
+    <meta name="viewport" content="width=device-width initial-scale=1.0">
+    <meta name="description" content="Media for the music of Man or Astroman">
+    <title>Rad Surf Rock Band</title>
+    <style>
+      body {
+        background-color: powderblue;
+        text-align: center;
+      }
+      .container {
+        background-color: white;
+        width: 600px;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid black;
+      }
+      .lyrics p, pre {
+        background-color: grey;
+        color: white;
+        font-size: small;
+        font-family: Arial;
+      }
     </style>
-
-</head>
+  </head>
 
   <body>
-
     <div id="art" class="container">
-          <img src="Images/Man_or_astroman.jpg" alt="space music cover" width="500"/>
-            <h1 Align=CENTER><b>Man Or Astroman</b></h1>
-     </div>
+      <img src="Images/Man_or_astroman.jpg" alt="space music cover" width="500"/>
+      <h1 Align=CENTER><b>Man Or Astroman</b></h1>
+    </div>
 
-      <div id="audio" class="container">
-        <h2 Align=CENTER><b>Astro Surf Songs</b></h2>
-        <iframe width="100%" height="200" allow="autoplay"
-        src="https://soundcloud.com/carla-guerracristo/popcorn-crabula">
-        </iframe>
+    <div id="audio" class="container">
+      <h2 Align=CENTER><b>Astro Surf Songs</b></h2>
+      <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/34337116&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+    </div>
 
+    <div id="video" class="container">
+      <h3 Align=CENTER><b>Video</b></h3>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/6syxA0ThR5Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
-</div>
-        <div id="video" class="container"><h3 Align=CENTER><b>Video</b></h3>
-          <iframe src="https://www.youtube.com/watch?v=6syxA0ThR5Y"
-              width="500" height="400">
-          </iframe>
+    <div id="lyrics" class="container lyrics">
+      <h4 Align=CENTER><b>Song Lyrics</b></h4>
+      <p>Mermaid Love Lyrics</p>
 
-              <video src="https://www.youtube.com/watch?v=6syxA0ThR5Y" width="500"/>
-</div>
-<h4 Align=CENTER><b>Song Lyrics</b></h4>
-          <div id="lyrcis" class="container">
-          <p>
-            Mermaid Love Lyrics</p>
+      <p>Through the tallest wave<br>
+      Into outer space<br>
+      Eyes of black against the fish tail</p>
 
-<p>Through the tallest wave
-Into outer space
-Eyes of black against the fish tail</p>
+      <p>He will die, he will cry<br>
+      He will fill his hands up with water<br>
+      'Til he gets the song of the siren</p>
 
-<p>He will die, he will cry
-He will fill his hands up with water
-'Til he gets the song of the siren</p>
+      <p>Keeps a shell tucked in a pocket to remind him of the sea<br>
+      Keeps his eyes upon the water to remind him what could...<br>
+      And the whisper that he hears. Is it coming from his head?<br>
+      Are there things that talk to him, when he wishes he was...</p>
 
-<p>Keeps a shell tucked in a pocket to remind him of the sea
-Keeps his eyes upon the water to remind him what could...
-And the whisper that he hears. Is it coming from his head?
-Are there things that talk to him, when he wishes he was...</p>
+      <p>Though the tallest wave<br>
+      Into outer space<br>
+      Eyes of black against the fish tail</p>
 
-<p>Though the tallest wave
-Into outer space
-Eyes of black against the fish tail</p>
+      <p>He will die, he will cry<br>
+      He will fill his hands up with water<br>
+      ’Til he gets the song of the siren</p>
 
-<p>He will die, he will cry
-He will fill his hands up with water
-’Til he gets the song of the siren</p>
+      <p>Get in</p>
+    </div>
 
-<p>Get in
-</p>
-
-                <img src="" />
-</div>
-
-            <div id="copyright" class="container">
-                  <b></b></5><img src="" />
-                      <h5 Align=CENTER><b>Copyright</b></h5>
-                      <p>Though I don't own this material I wish I did, it is being used for a school science project on gravitational wave propultion</p>
-</div>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2727.946408075614!2d-113.98552148483405!3d46.8644270469435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dcc3188c55ba3%3A0x763ac649759c375f!2sStudent+Recreation+Center%2C+32+Campus+Dr%2C+Missoula%2C+MT+59812!5e0!3m2!1sen!2sus!4v1551939410964" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-
-
-
-
-
-
+    <div id="copyright" class="container">
+      <h5 Align=CENTER><b>Copyright</b></h5>
+      <p>Though I don't own this material I wish I did, it is being used for a school science project on gravitational wave propultion</p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2727.946408075614!2d-113.98552148483405!3d46.8644270469435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dcc3188c55ba3%3A0x763ac649759c375f!2sStudent+Recreation+Center%2C+32+Campus+Dr%2C+Missoula%2C+MT+59812!5e0!3m2!1sen!2sus!4v1551939410964" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+  </body>
 </html>
