Pushed Readme.md
updated readme

--- a/Assignment-07/index.html
+++ b/Assignment-07/index.html
@@ -31,7 +31,7 @@
 
   <body>
     <div id="art" class="container">
-      <img src="Images/Man_or_astroman.jpg" alt="space music cover" width="500"/>
+      <img src="Images/Man_or_astroman.jpg" title="Man Or Astroman"alt="space music cover" width="500"/>
       <h1 Align=CENTER><b>Man Or Astroman</b></h1>
     </div>
 
