--- a/Assignment-08 /index.html
+++ b/Assignment-08 /index.html
@@ -33,6 +33,9 @@
      <li>Hibiscus Flowers</li>
       <li>Cardomon Pods</li>
         <li>Fresh Lime Lime Leaves</li>
+          <li>Lime Juice</li>
+            <li>Simple Syrup</li>
+
   </ul>
 
 <h3>Directions</h3>
@@ -41,7 +44,8 @@
     <li>Add ingreadiants and mix</li>
      <li>Let sit for one month or more</li>
       <li>Shake With ice and bitters</li>
-       <li>Garnish with a Rose Pedal</li>
+        <li>Add simple syrup and lime juice</li>
+          <li>Garnish with a Rose Pedal</li>
 
           <li>Drink</li>
   </ol>
