--- a/Assignment-08 /About.html
+++ b/Assignment-08 /About.html
@@ -13,13 +13,25 @@
 
         <style>
           nav {
-            background-color: blue;
+            background-color: red;
             text-align: center;
           }
-        </style>
+
+            body {
+              background-color: pink;
+              color: white
+            }
+          </style>
+
 </head>
 
   <body>
+<br>
+<br>
+<p> I chose this glamourous coctail recipe because it is one of my favorite that I have created.  I also have been trying to get sponsored
+  by several liquour companies as an athlete.  Maybe my coctail mixing skills will help.  I also want other people to enjoy my drinks.
+</p>
+<img src="Images/Coctail_party.png" alt="Katies mom Mixing Coctails" title="Rose Hibiscus Cardomon Coctail" width="500" align=center/>
 
 <nav>
 
