--- a/Assignment-08 /Contact.html
+++ b/Assignment-08 /Contact.html
@@ -10,16 +10,40 @@
         <meta name="description" content="My Recipe for Coctail">
         <meta name="author" content="Winter Ramos">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <style>
+          nav {
+            background-color: red;
+            text-align: center;
+          }
+
+            body {
+              background-color: pink;
+              color: white
+            }
+          </style>
+
 </head>
 
   <body>
+    <img src="Images/The Coctail .jpg" alt="Pink Coctail" title="Rose Hibiscus Cardomon Coctail" width="500" align=center/>
 
+    <p>Photo Credit <i>Winter Ramos</i></p>
+    <p>For more of his photos go to... <a href="https://winterproductions.pixieset.com/">Winter's Photos</a>.</p>
     <nav>
 
     <p><a href="./index.html">Home</a></p>
     <p><a href="./About.html">About</a></p>
     <p><a href="./Contact.html">Contact</a></p>
+    <p>Contact:</p>
 
+    <p><a href="mailto:winter.ramos@umontana.edu">winter.ramos@umontana.edu</a></p>
+    <address> 32 Campus Drive <br>
+    Missoula, MT 59812 </address>
+
+    <p>E-mail Winter for pertinent dietary questions</p>
+
+    <p><a href="http://apps.umt.edu/comments/">Comments</a></p>
     </nav>
 
 
