--- a/Assignment-08 /index.html
+++ b/Assignment-08 /index.html
@@ -11,6 +11,30 @@
         <meta name="author" content="Winter Ramos">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+        <style>
+        table.GeneratedTable {
+          width: 100%;
+          background-color: #ffffff;
+          border-collapse: collapse;
+          border-width: 5px;
+          border-color: #94ff85;
+          border-style: solid;
+          color: #000000;
+        }
+
+        table.GeneratedTable td, table.GeneratedTable th {
+          border-width: 5px;
+          border-color: #94ff85;
+          border-style: solid;
+          padding: 3px;
+        }
+
+        table.GeneratedTable thead {
+          background-color: #227cff;
+        }
+        </style>
+
         <style>
           nav {
             background-color: red;
@@ -25,7 +49,24 @@
 
   <body>
 <h1><b>Glamorous Cardomon and Hibiscus Infused Coctail</b></h1>
-
+<br>
+<table class="GeneratedTable" center>
+  <thead>
+    <tr>
+      <th>Prep Time</th>
+      <th>Difficulty</th>
+      <th>Taste level</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>One Month</td>
+      <td>Extremely Challenging</td>
+      <td>Seven Stars</td>
+    </tr>
+  </tbody>
+</table>
+<br>
 <h2>Ingredients</h2>
 
   <ul>
@@ -41,7 +82,7 @@
 <h3>Directions</h3>
 
   <ol>
-    <li>Add ingreadiants and mix</li>
+    <li>Add Ingredients and mix</li>
      <li>Let sit for one month or more</li>
       <li>Shake With ice and bitters</li>
         <li>Add simple syrup and lime juice</li>
