--- a/Assignment-08 /index.html
+++ b/Assignment-08 /index.html
@@ -15,7 +15,7 @@
         <style>
         table.GeneratedTable {
           width: 100%;
-          background-color: #ffffff;
+          background-color: #red;
           border-collapse: collapse;
           border-width: 5px;
           border-color: #94ff85;
@@ -25,7 +25,7 @@
 
         table.GeneratedTable td, table.GeneratedTable th {
           border-width: 5px;
-          border-color: #94ff85;
+          border-color: #red;
           border-style: solid;
           padding: 3px;
         }
@@ -45,6 +45,19 @@
             color: white
           }
         </style>
+        <style>
+      h1 {
+         color: red;
+         text-align: center;
+      }
+      h2 {
+         color: red;
+         text-align: center;
+      }
+      p, ul {
+         color: red;
+      }
+   </style>
 </head>
 
   <body>
@@ -109,15 +122,7 @@
 <p>For more of his photos go to... <a href="https://winterproductions.pixieset.com/">Winter's Photos</a>.</p>
 
 
-<p>Contact:</p>
 
-<p><a href="mailto:winter.ramos@umontana.edu">winter.ramos@umontana.edu</a></p>
-<address> 32 Campus Drive <br>
-Missoula, MT 59812 </address>
-
-<p>E-mail Winter for pertinent dietary questions</p>
-
-<p><a href="http://apps.umt.edu/comments/">Comments</a></p>
 
 <nav>
 
