--- a/Assignment-08 /About.html
+++ b/Assignment-08 /About.html
@@ -22,7 +22,18 @@
               color: white
             }
           </style>
-
+          <style>
+                body {
+                   background-image: url("./Images/Coctail_party.png");
+                }
+                .behind-text {
+                   background-color: white;
+                }
+                .padded {
+                   background-color: white;
+                   padding: 20px;
+                }
+             </style>
 </head>
 
   <body>
