--- a/Assignment-08 /Contact.html
+++ b/Assignment-08 /Contact.html
@@ -22,7 +22,18 @@
               color: white
             }
           </style>
-
+          <style>
+      body {
+         background-image: url("./Images/The Coctail .jpg");
+      }
+      .behind-text {
+         background-color: white;
+      }
+      .padded {
+         background-color: white;
+         padding: 20px;
+      }
+   </style>
 </head>
 
   <body>
