--- a/Assignment-09 /index.html
+++ b/Assignment-09 /index.html
@@ -5,7 +5,7 @@
 <html>
   <head>
     <title>The Four Colors of Winter</title>
-<!-- This is a really great recipe-->
+<!-- these are only four of many colors of the decade-->
     <meta charset="UTF-8">
         <meta name="description" content="The Best Decade 2018">
         <meta name="author" content="Winter Ramos">
@@ -31,7 +31,7 @@
         }
 
         table.GeneratedTable thead {
-          background-color: #227cff;
+          background-color: #FFD700;
         }
         </style>
 
@@ -66,7 +66,7 @@
 <table class="GeneratedTable" center>
   <thead>
     <tr>
-      <th>2018</th>
+      <th> <font size="6">2018</font> </th>
 
     </tr>
   </thead>
@@ -88,21 +88,13 @@
         <li>Golden Glamour</li>
 
 
-
-  </ul>
-
-
-<i></i>
-<h4>by: <b><i>Winter Ramos</i></b></h4>
+</ul>
 
 
-
-
-<hr />
 
 <img src="Images/IMG_0398.jpeg" alt="Orange Space Suite" title="Rose Hibiscus Cardomon Coctail" width="500"/>
-<img src="Images/IMG_0906.jpeg" alt="Golden Boy" title="My Favorite Golden Jacket" width="500"/>
-<img src="Images/IMG_8639.png" alt="Red Glitter" title="Glitter Shirt" width="500"/>
+<img src="Images/IMG_0906.jpeg" alt="Golden Boy" title="My Favorite Golden Jacket" width="500" class="rotate90"/>
+<img src="Images/IMG_8639.png"  alt="Red Glitter" title="Glitter Shirt" width="500"/>
 <img src="Images/IMG_5338.jpeg" alt="Purple Valour" title="A Purple New Year" width="500"/>
 
 <p>For more of his photos go to... <a href="https://winterproductions.pixieset.com/">Winter's Photos</a>.</p>
