--- a/Assignment-09 /index.html
+++ b/Assignment-09 /index.html
@@ -93,7 +93,7 @@
 
 
 <img src="Images/IMG_0398.jpeg" alt="Orange Space Suite" title="Rose Hibiscus Cardomon Coctail" width="500"/>
-<img src="Images/IMG_0906.jpeg" alt="Golden Boy" title="My Favorite Golden Jacket" width="500" class="rotate90"/>
+<img src="Images/IMG_0906.jpeg" alt="Golden Boy" title="My Favorite Golden Jacket" width="500"/>
 <img src="Images/IMG_8639.png"  alt="Red Glitter" title="Glitter Shirt" width="500"/>
 <img src="Images/IMG_5338.jpeg" alt="Purple Valour" title="A Purple New Year" width="500"/>
 
