--- a/Assignment-10/index.html
+++ b/Assignment-10/index.html
@@ -49,11 +49,11 @@ My largest other collection is Western Americana, I love reading the journals ex
 
 <br>
 
-
+<div class="footer">
 
 <p>For more info go to... <a href="https://pixieset.com/collection/17417622/">Winter's Library Collection</a></p>
 
-
+</div>
 
 
   </body>
