--- a/Assignment-10/index.html
+++ b/Assignment-10/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/style.css" />
     <meta charset="UTF-8">
-
+<link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
 </head>
 
   <body>
