--- a/Assignment-09 /index.html
+++ b/Assignment-09 /index.html
@@ -10,54 +10,9 @@
         <meta name="description" content="The Best Decade 2018">
         <meta name="author" content="Winter Ramos">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="css/style.css" />
 
 
-        <style>
-        table.GeneratedTable {
-          width: 100%;
-          background-color: #red;
-          border-collapse: collapse;
-          border-width: 5px;
-          border-color: #94ff85;
-          border-style: solid;
-          color: #000000;
-        }
-
-        table.GeneratedTable td, table.GeneratedTable th {
-          border-width: 5px;
-          border-color: #red;
-          border-style: solid;
-          padding: 3px;
-        }
-
-        table.GeneratedTable thead {
-          background-color: #FFD700;
-        }
-        </style>
-
-        <style>
-          nav {
-            background-color: red;
-            text-align: center;
-          }
-          body {
-            background-color: darkmagenta;
-            color: white
-          }
-        </style>
-        <style>
-      h1 {
-         color: red;
-         text-align: center;
-      }
-      h2 {
-         color: red;
-         text-align: center;
-      }
-      p, ul {
-         color: red;
-      }
-   </style>
 </head>
 
   <body>
@@ -82,10 +37,12 @@
 <h2>The Best Decade in Color</h2>
 
   <ul>
-    <li>Dark Magenta</li>
+    <li class="Dark"> Dark Magenta</li>
      <li>Space Orange</li>
-      <li>Glitter Red</li>
-        <li>Golden Glamour</li>
+      <li class="Glitter">Glitter Red</li>
+
+
+          <li>Golden Glamour</li>
 
 
 </ul>
